# RWT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  test.cpp
detail/: rwt_omp.h
